# ry-s-ray

./: .gitignore  CMakeLists.txt  LICENSE  README.md
blender/: box.blend  glass_ball.blend
glb/: glass_ball.glb
include/: BSDF.h  BVH.h  BxDF.h  algorithm.h  display.h  light.h  loader.h  loder.h  material.h  model_loder.h  pub.h  ray_trace.h  task.h  tracer.h
source/: display.hpp  main.cpp  pch.h
source/accelerate/: bvh.cpp  bvh.h  task.cpp  task.h
source/blender/: duck.blend  t.blend
source/bsdf/: BSDF.cpp  BSDF.h  bsdf.cpp
source/glb/: box.glb  d.glb  t.glb
source/renderer/: denoiser.cpp  denoiser.h  path.cpp  path.h  sample.hpp  sampler.hpp  spectrum.hpp
source/scene/: light.cpp  light.h  material.cpp  material.h  model.cpp  model.h  node.hpp  scene.cpp  scene.h  texture.hpp
source/scenes/: light.cpp  light.h  loader.cpp  material.cpp  material.h  model.cpp  model.h  node.hpp  scene.cpp  scene.h
source/shape/: geometry.hpp  interaction.hpp
src/: BSDF.cpp  BVH.cpp  BxDF.cpp  algorithm.cpp  light.cpp  loader.cpp  loder.cpp  main.cpp  material.cpp  model_loder.cpp  ray_trace.cpp  task.cpp  tracer.cpp
